--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <script src="https://cdn.rawgit.com/dcodeIO/protobuf.js/6.8.8/dist/protobuf.min.js"></script>
-    <script src="helpers.js"></script>
+    <script src="lib/utils.js"></script>
     <script src="build/index.js"></script>
 
     <!-- In app usage example -->
